Implement OrganizationServiceTest and some cleanup work.