@@ -9,6 +9,7 @@ import org.springframework.web.bind.annotation.RestController;
 
 import java.security.Principal;
 import java.util.Collections;
+import java.util.List;
 
 @RestController
 public class LoginController {
@@ -18,7 +19,8 @@ public class LoginController {
         return ResponseEntity.ok(new AuthenticationResponse(user.getName(),
                 SecurityContextHolder.getContext().getAuthentication().getAuthorities().stream().map(GrantedAuthority::getAuthority).toList(),
                 Collections.emptyList(),
-                Collections.emptyList()));
+                Collections.emptyList(),
+                List.of("test seasons")));
     }
 
     @GetMapping(value = "/administration/logout")
